Fix: Cadvisor image src

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       ports:
         - "7100:9100"
   cadvisor:
-      image: google/cadvisor:latest
+      image: gcr.io/cadvisor/cadvisor:latest
       container_name: cadvisor
       ports: 
         - "7200:8080"
