--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     container_name: FastApi-app
     ports:
       - "5001:5001"
+    networks:
+      - loadtest-net
 
   sonarqube:
     image: sonarqube:latest
@@ -21,6 +23,8 @@ services:
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_logs:/opt/sonarqube/logs
       - sonarqube_extensions:/opt/sonarqube/extensions
+    networks:
+      - loadtest-net
 
   prometheus:
       image: prom/prometheus:latest
@@ -31,6 +35,8 @@ services:
         - "7070:9090"
       command:
         - "--config.file=/etc/prometheus/prometheus.yml"
+      networks:
+      - loadtest-net
   grafana:
       image: grafana/grafana:latest
       container_name: grafana
@@ -40,11 +46,15 @@ services:
         - GF_SECURITY_ADMIN_PASSWORD=admin  # 기본 Grafana 로그인 비밀번호
       volumes:
         - grafana-data:/var/lib/grafana
+      networks:
+      - loadtest-net
   node-exporter:
       image: prom/node-exporter:latest
       container_name: node-exporter
       ports:
         - "7100:9100"
+      networks:
+      - loadtest-net
   cadvisor:
       image: gcr.io/cadvisor/cadvisor:latest
       container_name: cadvisor
@@ -55,30 +65,32 @@ services:
         - /var/run:/var/run:ro
         - /sys:/sys:ro
         - /var/lib/docker/:/var/lib/docker:ro
+      networks:
+      - loadtest-net
   jmeter:
     build:
       context: ./jmeter
       dockerfile: Dockerfile
     container_name: jmeter
-    # host 에 ./jmeter/report 폴더가 있으면 JMeter가 덮어쓰지 못할 수 있으니
-    # volumes 에서는 결과만 뽑아서 호스트로 가져오도록 합니다.
     volumes:
-      - ./jmeter/results.jtl:/jmeter/results.jtl
-      - ./jmeter/report:/jmeter/report
-    depends_on:
-      - fastapi-app
-    command: >
-      sh -c "
-        rm -rf /jmeter/report &&
-        jmeter -n \
-          -t /jmeter/fastapi_test_plan.jmx \
-          -l /jmeter/results.jtl \
-          -JBASE_URL=http://fastapi-app:5001 \
-          -e -f \
-          -o /jmeter/report
-      "
+      - ./jmeter:/jmeter
+    command:
+      - jmeter
+      - -n
+      - -t
+      - /jmeter/fastapi_test_plan.jmx
+      - -l
+      - /jmeter/results.jtl
+      - -JBASE_URL=http://fastapi-app:5001
+      - -Jjmeter.save.saveservice.output_format=csv
+      - -e
+      - -o
+      - /jmeter/report
     networks:
       - loadtest-net
+networks:
+  loadtest-net:
+    driver: bridge
 
 volumes:
   sonarqube_conf:
