--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
     container_name: FastApi-app
     ports:
       - "5001:5001"
+    depends_on:
+      - loki
+    environment:
+      - LOKI_ENDPOINT=http://loki:3100/loki/api/v1/push
     networks:
       - loadtest-net
 
@@ -88,6 +92,14 @@ services:
       - /jmeter/report
     networks:
       - loadtest-net
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
+    ports:
+      - "3100:3100"
+    networks:
+      - loadtest-net
+      
 networks:
   loadtest-net:
     driver: bridge
